# SlateMark

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
packaging/: README.md
packaging/linux/: io.github.HarryNotF0und.SlateMark.desktop.in  io.github.HarryNotF0und.SlateMark.metainfo.xml.in
resources/: resources.qrc
resources/preview/: index.html  preview.css  preview.js
resources/themes/: dark.qss  light.qss
src/: main.cpp
src/app/: slatemark.rc
src/commands/: CommandRegistry.cpp  CommandRegistry.h
src/dialogs/: ExportDialog.cpp  ExportDialog.h  SettingsDialog.cpp  SettingsDialog.h  TableDialog.cpp  TableDialog.h
src/documents/: Document.h
src/editor/: LineNumberArea.h  MarkdownEditor.cpp  MarkdownEditor.h  MarkdownHighlighter.cpp  MarkdownHighlighter.h
src/preview/: PreviewBridge.cpp  PreviewBridge.h  PreviewWidget.cpp  PreviewWidget.h
src/services/: ExportService.cpp  ExportService.h  FileService.cpp  FileService.h  ImageService.cpp  ImageService.h  LoggingService.cpp  LoggingService.h  MarkdownService.cpp  MarkdownService.h  OutlineService.cpp  OutlineService.h  RecentFilesService.cpp  RecentFilesService.h  RecoveryService.cpp  RecoveryService.h  ScrollSyncService.cpp  ScrollSyncService.h  SettingsService.cpp  SettingsService.h  StatisticsService.cpp  StatisticsService.h
src/theme/: IconManager.cpp  IconManager.h  ThemeManager.cpp  ThemeManager.h
src/widgets/: CommandPalette.cpp  CommandPalette.h  DocumentTabBar.cpp  DocumentTabBar.h  NavigationRail.cpp  NavigationRail.h  StatusBarWidget.cpp  StatusBarWidget.h  SvgIconButton.cpp  SvgIconButton.h  ToolPanel.cpp  ToolPanel.h  ViewModeSwitcher.cpp  ViewModeSwitcher.h
src/window/: MainWindow.cpp  MainWindow.h
tests/: test_core.cpp
